tests/parser-test-files/bad-files/define-class.21.error
error: Invalid variable
  --> test:5:3
   |
 5 |    (.方法 (:a -> :a)))
   |     ^^^ variables cannot start with '.'
